--- a/layout.css
+++ b/layout.css
@@ -48,7 +48,7 @@ ul > li > ol > li > ul > li { font-size:1.1rem }
 
 .part-slide h1 { text-align:center; margin-top:80px; font-family: 'Open Sans', sans-serif }
 .part-slide h2 { font-size:2rem; color:#000; text-align:center; margin-top:30px; font-family: 'Open Sans', sans-serif }
-.part-slide .remark-slide-number { display:none }
+/* .part-slide .remark-slide-number { display:none } */
 
 .header {
   position: fixed;
